--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
