--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "0.19.2",
     "react": "^16.13.1",
     "react-cookie": "4.0.3",
     "react-dom": "^16.13.1",
@@ -16,13 +17,14 @@
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^2.3.0",
-    "axios": "0.19.2"
+    "redux": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "firebase": "firebase"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase-tools": "^8.4.2"
   }
 }
