--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^2.3.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "query-string": "6.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
