--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-HOST_API=https://chat-app-vietnam.herokuapp.com/
+DOMAIN=https://chatapp-room.herokuapp.com
+REACT_APP_API=$DOMAIN/api
+REACT_APP_SOCKET=$DOMAIN
